--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "@mediapipe/tasks-vision": "^0.10.32",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.5.0",
+    "katex": "^0.16.0",
     "lucide-react": "^0.563.0",
+    "marked": "^11.0.0",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "three": "^0.182.0",
